<resources>
    <string name="app_name">우정하자</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="calendarKeyDatePattern">yyyyMMdd</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="calendar">달력</string>
    <string name="calculation">정산</string>
    <string name="friends">친구</string>
    <string name="calculation_room">정산방</string>
    <string name="edit_calculation">정산 수정</string>
    <string name="new_calculation">정산 추가</string>
    <string name="calculation_detail_info">정산세부</string>
    <string name="total_money">총 금액</string>
    <string name="hint_input_total_money">총 금액을 입력</string>
    <string name="manual_input">직접입력</string>
    <string name="add_receipt">영수증 추가</string>
    <string name="calculation_list">정산 목록</string>
    <string name="input_calculation_item_name">정산 아이템 입력</string>
    <string name="input_calculation_item_price">금액</string>
    <string name="add_friend">친구추가</string>
    <string name="add_calculation_item">추가</string>
    <string name="check">확인</string>
    <string name="exit">나가기</string>
    <string name="close">닫기</string>
    <string name="shoot_camera">사진 촬영</string>
    <string name="pick_image">사진 선택</string>
    <string name="new_calc_room">정산방 추가</string>
    <string name="invite_friends_list">초대 친구 목록</string>
    <string name="input_search_friend_name">친구 이름 입력</string>
    <string name="hint_input_room_name">방 제목 입력</string>
    <string name="modify_img">사진 편집</string>
    <string name="replace_img">사진 교체</string>
    <string name="add_img">사진 추가</string>
    <string name="delete_img">사진 삭제</string>
    <string name="receipt_img">영수증 사진</string>
    <string name="removed_receipt">영수증이 삭제 되었습니다</string>
    <string name="unable_to_remove_receipt">영수증 삭제 불가</string>
    <string name="receipt_count">영수증 개수</string>
    <string name="add">추가</string>
    <string name="final_confirmation">최종 확인</string>
    <string name="calculation_type_divide_n">1/N</string>
    <string name="calculation_type_custom">직접 입력</string>
    <string name="input_title">영수증 제목 입력</string>
    <string name="add_my_bank_account">내 계좌 추가</string>
    <string name="select_bank">은행 선택</string>
    <string name="input_bank_account_number">계좌 번호 입력</string>
    <string name="input_bank_account_number_except_minus">\'-\' 등을 제외한 숫자만 입력하세요</string>
    <string name="input_bank_account_holder">예금주 입력</string>
    <string name="please_recheck_the_input_values">값들을 재 확인 해주세요</string>
    <string name="bank_name">은행</string>
    <string name="bank_account_number">계좌번호</string>
    <string name="bank_account_holder">예금주</string>
    <string name="added_new_bank_account">새 계좌가 추가되었습니다</string>
    <string name="my_back_account_list">내 계좌 목록</string>
    <string name="remove">삭제</string>
    <string name="modify">수정</string>
    <string name="remove_my_account">내 계좌 삭제</string>
    <string name="removed_bank_account">계좌 삭제 완료</string>
    <string name="edit_my_bank_account">내 계좌 수정</string>
    <string name="edied_my_bank_account">내 계좌 정보가 수정되었습니다</string>
    <string name="profile_modify">프로필 변경</string>

    <string name="calc_notification_channel_name">정산 알림</string>
    <string name="calc_notification_channel_description">정산 관련 알림을 표시합니다.</string>

    <string name="chat_notification_channel_name">채팅</string>
    <string name="chat_notification_channel_description">채팅 내용을 표시합니다.</string>

    <string name="receipt_notification_channel_name">영수증</string>
    <string name="receipt_notification_channel_description">영수증 추가 시 알립니다.</string>


    <string name="added_new_receipt">정산에 참여해주세요!</string>
    <string name="payer">결제자</string>
    <string name="invite_friends">친구 초대</string>
    <string name="go_to_today">오늘로 이동</string>
    <string name="go_to_first_selected_day">첫 선택날짜로 이동</string>
    <string name="input_email_of_friend">추가할 친구의 이메일 입력</string>
    <string name="cancel">취소</string>
    <string name="empty_search_query">검색어를 입력해주세요!</string>
    <string name="empty_my_friends">친구 목록이 비어있습니다</string>
    <string name="empty_receipts">정산 내역이 없습니다</string>
    <string name="no_search_results_found">검색 결과가 없습니다</string>

    <string name="adding_my_bank_account">새 계좌를 추가하는 중입니다</string>
    <string name="adding_my_friend">새 친구를 추가하는 중입니다</string>
    <string name="is_duplicate_bank_account">이미 존재하는 계좌입니다</string>
    <string name="set_alias">이름 수정</string>
    <string name="hint_input_alias">지정할 별명을 입력</string>
    <string name="empty_alias">값을 입력해주세요</string>
    <string name="error_load_real_name_of_user">실제 이름 가져오기 실패</string>


    <string name="Firebase_ApiKey"></string>
    <string name="input_calculation_item_unit_price">단가</string>
    <string name="count">수량</string>
    <string name="empty_chats">채팅 내역이 없습니다</string>
    <string name="empty_calc_rooms">정산방이 없습니다</string>
    <string name="empty_friends_list">친구를 추가해보세요</string>
    <string name="adding_receipts">영수증 추가 중</string>
    <string name="success_add_receipts">영수증 추가 완료</string>
    <string name="exit_from_room">정산방에서 나가기</string>
    <string name="msg_exit_from_calc_room">정산방에서 나가시겠습니까?</string>
    <string name="msg_invite_new_friends">선택한 친구들을 초대하시겠습니까?</string>
    <string name="invite">초대</string>
    <string name="modify_receipt">영수증 수정</string>
    <string name="msg_modify_receipt">영수증 수정을 확정하시겠습니까?</string>
    <string name="receipt">영수증</string>
    <string name="loading_receipt_info">영수증 정보를 불러오는 중입니다</string>
    <string name="work_for_receipt">영수증에 대한 작업</string>
    <string name="available_remove_and_modify">삭제 또는 수정이 가능합니다</string>
    <string name="remove_receipt">영수증 삭제</string>
    <string name="unit_price">단가</string>
    <string name="product_name">항목</string>
    <string name="invited_to_new_calc_room">정산방에 초대되었습니다.</string>
    <string name="estimated_amount">예상 금액</string>
    <string name="num_of_people_selected">선택 인원</string>
    <string name="empty_ongoing_receipts">진행 중인 정산 없음</string>
    <string name="my_settlement_amount">나의 정산금액</string>
    <string name="calc_rush">정산 요청</string>
    <string name="msg_calc_rush">정산 부탁드립니다!</string>
    <string name="no_available_rush_calc">정산 요청이 불가합니다.</string>
    <string name="not_selected_recipients">요청을 받을 사람을 선택해주세요</string>
    <string name="msg_request_rush_calc">정산 요청을 하시겠습니까?</string>
    <string name="participants_who_have_not_been_verified">아직 정산을 확인하지 않은 친구가 있습니다</string>
    <string name="money_to_give">보낼 금액</string>
    <string name="money_to_be_received">받을 금액</string>
    <string name="add_calculation">정산 추가</string>
    <string name="verified">확인 완료</string>
    <string name="msg_modify_calculation">내 정산 정보를 수정하시겠습니까?</string>
    <string name="empty_my_bank_accounts">내 계좌 목록이 비어있습니다.</string>
    <string name="failed_loading_image">사진 불러오기 실패</string>
    <string name="impossible_to_invite_friends_because_of_calculation">정산이 완료되지 않아 친구 초대가 불가합니다!</string>
    <string name="complete_calculation">정산 확정</string>
    <string name="msg_complete_calculation">정산을 완료하시겠습니까?</string>
    <string name="not_settled_yet">아직 정산되지 않았습니다</string>

</resources>