<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/new_calculation"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/receipt_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:labelFor="@id/receipt_count"
        android:text="@string/receipt_count"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/receipt_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/receipt_count"
        />

    <TextView
        android:id="@+id/receipt_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintLeft_toRightOf="@id/receipt_count_label"
        app:layout_constraintRight_toLeftOf="@id/add_receipt_item"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
        />

    <Button
        android:id="@+id/add_receipt_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_receipt"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintLeft_toRightOf="@id/receipt_count"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintTop_toBottomOf="@id/add_receipt_item"
        />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:ci_drawable="@color/design_default_color_primary"
        app:ci_drawable_unselected="@color/gray"
        app:ci_orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>